# quickbot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: gate.md  phase.md
.github/workflows/: lint.yml
config/: create2_calibration.yaml  cyclonedds.xml  nav2_create2_kilted.yaml
docker/: kilted-base.Dockerfile  rmf-kilted.Dockerfile  robot.Dockerfile
docs/: architecture.md  calibration.md  gates.md  hardware-bringup.md  master-plan.md  quickstart.md  runbook.md  troubleshooting.md
docs/adr/: 0001-kilted-first-lyrical-second.md  0002-d455-first-lidar-later.md  0003-host-networking-cyclone-dds.md  0004-mit-license.md  README.md
maps/: README.md
rmf_maps/: README.md
tools/: g0_verify.sh  g1_dds.sh  g2_devices.sh
validation/: gates.md
ws/src/create2_driver/: package.xml  setup.cfg  setup.py
ws/src/create2_driver/create2_driver/: driver_node.py  oi.py  smoke.py
ws/src/create2_driver/launch/: create2_driver.launch.py
ws/src/create2_driver/test/: test_oi.py
ws/src/quickbot_bringup/: CMakeLists.txt  package.xml
ws/src/quickbot_bringup/launch/: robot.launch.py
ws/src/quickbot_description/: CMakeLists.txt  package.xml
ws/src/quickbot_description/launch/: description.launch.py
ws/src/quickbot_description/rviz/: quickbot.rviz
ws/src/quickbot_description/urdf/: quickbot.urdf.xacro
ws/src/quickbot_nav/: CMakeLists.txt  package.xml
ws/src/quickbot_rmf_adapter/: package.xml  setup.cfg  setup.py
ws/src/quickbot_tools/: package.xml  setup.cfg  setup.py
