<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quickbot_description</name>
  <version>0.0.1</version>
  <description>URDF/Xacro, frames, sensor mount transforms for QuickBot (Create 2 + Pi 5 + D455).</description>
  <maintainer email="bobby@mindhive.tech">Bobby Larson</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
