<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quickbot_rmf_adapter</name>
  <version>0.0.1</version>
  <description>Single-robot Open-RMF fleet adapter mapping RMF tasks to Nav2 NavigateToPose. Based on fleet_adapter_template.</description>
  <maintainer email="bobby@mindhive.tech">Bobby Larson</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
