<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quickbot_tools</name>
  <version>0.0.1</version>
  <description>Smoke tests, health checks, calibration helpers, log capture scripts for validation gates.</description>
  <maintainer email="bobby@mindhive.tech">Bobby Larson</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
